// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagList > hide items after maxLength 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              cloud
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              provider
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              database
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_3t_"
          aria-describedby="_r_3t_"
          class="styles__w40vpo9"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y6"
            data-testid="taglist-open"
            type="button"
          >
            +2
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="cloud"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="provider"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                provider
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="database"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                database
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +2
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_8_"
          aria-describedby="_r_8_"
          class="styles__w40vpo9"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y6"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +1
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly a scrollable popover with non default popoverMaxHeight 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              very
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              item
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              item
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              item
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              item
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_8f_"
          aria-describedby="_r_8f_"
          class="styles__w40vpo9"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y6"
            data-testid="taglist-open"
            type="button"
          >
            +50
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="very"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                very
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="item"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                item
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="item"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                item
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="item"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                item
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="item"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_code__m4c9owv style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                item
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +50
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and add ellipsis to the first tag as it too long 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway is the best cloud provider ever invented
            </span>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="scaleway is the best cloud provider ever invented"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway is the best cloud provider ever invented
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +0
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and ignore custom threshold as it does not fit the parent 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              cloud
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_23_"
          aria-describedby="_r_23_"
          class="styles__w40vpo9"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y6"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="cloud"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +1
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly when maxLength is smaller than first tag 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +0
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with copiable 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <div
          class="styles__1y5sygv5"
        >
          <div
            class="styles_copiable__d6zknp1 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <button
              class="styles__1f9zr5y5 styles_copiable__d6zknp4 styles__d6zknp6 styles_copiable_true__d6zknp7 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi styles_undefined_compound_2__d6zknpl"
              data-testid=""
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </button>
          </div>
        </div>
        <div
          class="styles__1y5sygv5"
        >
          <div
            class="styles_copiable__d6zknp1 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <button
              class="styles__1f9zr5y5 styles_copiable__d6zknp4 styles__d6zknp6 styles_copiable_true__d6zknp7 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi styles_undefined_compound_2__d6zknpl"
              data-testid=""
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles__1y5sygv5"
          >
            <div
              class="styles_copiable__d6zknp1 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
              style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
            >
              <button
                class="styles__1f9zr5y5 styles_copiable__d6zknp4 styles__d6zknp6 styles_copiable_true__d6zknp7 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi styles_undefined_compound_2__d6zknpl"
                data-testid="scaleway"
              >
                <span
                  class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
                >
                  scaleway
                </span>
              </button>
            </div>
          </div>
          <div
            class="styles__1y5sygv5"
          >
            <div
              class="styles_copiable__d6zknp1 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
              style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
            >
              <button
                class="styles__1f9zr5y5 styles_copiable__d6zknp4 styles__d6zknp6 styles_copiable_true__d6zknp7 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi styles_undefined_compound_2__d6zknpl"
                data-testid="cloud"
              >
                <span
                  class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
                >
                  cloud
                </span>
              </button>
            </div>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +0
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              cloud
            </span>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="cloud"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +0
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              cloud
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_1i_"
          aria-describedby="_r_1i_"
          class="styles__w40vpo9"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y6"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="cloud"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +1
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_2k_"
          aria-describedby="_r_2k_"
          class="styles__w40vpo9"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y6"
            data-testid="taglist-open"
            type="button"
          >
            +2
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +2
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with icons 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <div
          class="styles__1y5sygv5"
        >
          <div
            class="styles_copiable__d6zknp1 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <button
              class="styles__1f9zr5y5 styles_copiable__d6zknp4 styles__d6zknp6 styles_copiable_true__d6zknp7 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi styles_undefined_compound_2__d6zknpl"
              data-testid=""
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </button>
          </div>
        </div>
        <div
          class="styles__1y5sygv5"
        >
          <div
            class="styles_copiable__d6zknp1 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <button
              class="styles__1f9zr5y5 styles_copiable__d6zknp4 styles__d6zknp6 styles_copiable_true__d6zknp7 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi styles_undefined_compound_2__d6zknpl"
              data-testid=""
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles__1y5sygv5"
          >
            <div
              class="styles_copiable__d6zknp1 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
              style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
            >
              <button
                class="styles__1f9zr5y5 styles_copiable__d6zknp4 styles__d6zknp6 styles_copiable_true__d6zknp7 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi styles_undefined_compound_2__d6zknpl"
                data-testid="scaleway"
              >
                <span
                  class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
                >
                  scaleway
                </span>
              </button>
            </div>
          </div>
          <div
            class="styles__1y5sygv5"
          >
            <div
              class="styles_copiable__d6zknp1 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
              style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
            >
              <button
                class="styles__1f9zr5y5 styles_copiable__d6zknp4 styles__d6zknp6 styles_copiable_true__d6zknp7 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi styles_undefined_compound_2__d6zknpl"
                data-testid="cloud"
              >
                <span
                  class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
                >
                  cloud
                </span>
              </button>
            </div>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +0
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with multiline 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3 styles_multiline_true__1f9zr5y4"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              cloud
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_4e_"
          aria-describedby="_r_4e_"
          class="styles__w40vpo9"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y6"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3 styles_multiline_true__1f9zr5y4"
        >
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="cloud"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                cloud
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +1
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with no tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      />
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        />
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +0
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with placement 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1f9zr5y1"
      data-testid="taglist"
    >
      <div
        class="styles__1f9zr5y3"
        data-testid="taglist-container"
      >
        <div
          class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
          style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
        >
          <span
            class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
            data-testid=""
          >
            <span
              class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
            >
              scaleway
            </span>
          </span>
        </div>
        <div
          aria-controls="_r_h_"
          aria-describedby="_r_h_"
          class="styles__w40vpo9"
          tabindex="-1"
        >
          <button
            class="styles__1f9zr5y6"
            data-testid="taglist-open"
            type="button"
          >
            +1
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="styles__1f9zr5y2"
      >
        <div
          class="styles__1f9zr5y3"
        >
          <div
            class="styles_notCopiable__d6zknp2 styles__d6zknp0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
            style="--_4k0ekn0: fit-content; --_4k0ekn1: 100%;"
          >
            <span
              class="styles__1f9zr5y5 styles_notCopiable__d6zknp5 styles__d6zknp6 styles_sentiment_neutral__d6zknpc styles_isButton_false__d6zknpi"
              data-testid="scaleway"
            >
              <span
                class="styles__d6zknp14 style__m4c9ow0 style_oneLine_true__m4c9ow3 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32 style__m4c9ow3e"
              >
                scaleway
              </span>
            </span>
          </div>
        </div>
        <button
          class="styles__1f9zr5y6"
          type="button"
        >
          +1
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
